--- a/index.html
+++ b/index.html
@@ -94,51 +94,40 @@
           </p>
           <div class="self_description" id="self_description_intro">
             <p class="px-5 pt-2">
-              At the beginning of my career, I was leaning towards of becoming a
-              researcher. I finished my Bachelors in Agricultural Economics and
-              majored in Price and Marketing analysis. My first job was in Data
-              management for local projects that my previous university was
-              conducting. I was collecting and storing information from each
-              projects assigned to me. I only stayed on the job for one year and
-              started to look for something more challenging. I moved to the
-              city and found a job as a Sales Assistant. Just a month being in
-              the position, my immediate manager saw the potential in me and
-              promoted me to Sales Manager. This started my journey in Sales and
-              Marketing from working with different multinational companies like
-              Unilever, Procter & Gamble and Nestle. After a few years working
-              in Sales, I took break to study Master in Business Management.
-              During this time, I also worked as Research assistant part-time
-              for a non-profit organization (International Rice Research
-              Institute).
+              I began my career leaning towards becoming a Researcher,
+              completing a Bachelor's in Agricultural Economics majoring in
+              Price and Marketing analysis. My first job was in Data Management
+              for university projects, but after a year, I yearned for more
+              challenge and transitioned to Sales, where I quickly became a
+              Sales Manager. This started my journey in Sales and Marketing,
+              working with companies like Unilever, Procter & Gamble, and
+              Nestle. Later, I took a break to pursue a Master's in Business
+              Management and working part-time as a Research Assistant for the
+              International Rice Research Institute.
             </p>
           </div>
         </div>
         <div class="self_description">
           <p class="px-5">
-            I moved to Dubai, UAE 2 years after my career break to try my luck
-            in a new city. I found a Sales job in the hotel industry. I started
-            as a Sales Specialist for Sheraton JBR and after a year of hard
-            work, I was chosen to be part of the Global Sales Office for the
-            Mother company "Starwood Hotels". When my 8 years stint in Dubai has
-            come to an end, I moved to Switzerland with my husband. For another
-            2 years, I continued working remotely from Switzerland for a local
-            company in Dubai representing them in European countries. I also
-            made use of this time to learn German. I got my first job as a
-            Congress Coordinator for EULAR in Zurich.
+            I moved to Dubai, UAE, where I worked in hotel sales, advancing from
+            Sales Specialist at Sheraton JBR to the Global Sales Office for
+            Starwood Hotels. I met my husband after my first year. We got
+            married after 2 years dating. After 8 years, We relocated to
+            Switzerland where my husband's job is permanently based. My first 2
+            years in Switzerland, I continued working remotely for a Dubai-based
+            company and made use of this time learning German. My first Swiss
+            role was as Congress Coordinator for EULAR in Zurich.
             <br />
             <br />
-            In 2023, I found my passion in coding for Web Development. I have
-            completed various course thru online Bootcamp. This experience has
-            ignited my desire to learn and grow in this field. For the past 2
-            years, I have honed my skills in HTML, CSS and JavaScript. I have
-            created applications and websites. I believe that all these years of
-            my experience have given me different skill set that I could apply
-            to my personal and professional life. I am dedicated and driven, I
-            constantly putting in effort to achieve my goals and improve them. I
-            am always eager to learn and explore new ideas. My optimism and
-            belief in myself give me the strength to tackle any obstacle and
-            pursue my ambitions. "Quitting" is not in my vocabulary. I believe
-            in the saying "When the going gets tough, the tough get going".
+            In 2023, I discovered a passion for coding and web development, I
+            completed various online courses. This experience has ignited my
+            desire to learn and grow in this field. I have honed my skills in
+            HTML, CSS, and JavaScript over the past 2 years. I've created
+            applications and websites, combining my diverse professional
+            experiences with dedication and drive. My optimism and self belief
+            empower me to overcome challenges. "Quitting" is not in my
+            vocabulary. I live by the mantra, "When the going gets tough, the
+            tough get going."
           </p>
         </div>
       </div>
