--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </nav>
     <div class="container pb-4" id="description-container">
       <div class="row">
-        <div class="col-lg-4 text-center pt-5 mb-3">
+        <div class="col-lg-4 text-center pt-5 mt-5">
           <img
             src="images/ginelle_transparent.png"
             class="img-fluid rounded"
@@ -87,7 +87,7 @@
           />
         </div>
         <div class="col-md-8 primary-text" id="self-description">
-          <h1 class="text-center mt-2" id="ginelle_doubek">Ginelle Doubek</h1>
+          <h1 class="text-center" id="ginelle_doubek">Ginelle Doubek</h1>
           <h3 class="text-center">~Ginny~</h3>
           <p class="text-center mt-2 mb-3" id="job_based">
             "I am a woman of action."
@@ -103,22 +103,22 @@
               working with companies like Unilever, Procter & Gamble, and
               Nestle. Later, I took a break to pursue a Master's in Business
               Management and working part-time as a Research Assistant for the
-              International Rice Research Institute.
+              International Rice Research Institute. <br />
+              <br />
+              I moved to Dubai, UAE, where I worked in hotel sales, advancing
+              from Sales Specialist at Sheraton JBR to the Global Sales Office
+              for Starwood Hotels. During my first year in Dubai, I met my
+              husband, and after two years of dating, we got married. Following
+              8 good years in Dubai, we relocated to Switzerland where my
+              husband's job is permanently based. My first 2 years in
+              Switzerland, I continued working remotely for a Dubai-based
+              company and made use of this time learning German. My first Swiss
+              role was as Congress Coordinator for EULAR in Zurich.
             </p>
           </div>
         </div>
         <div class="self_description">
           <p class="px-5">
-            I moved to Dubai, UAE, where I worked in hotel sales, advancing from
-            Sales Specialist at Sheraton JBR to the Global Sales Office for
-            Starwood Hotels. I met my husband after my first year. We got
-            married after 2 years dating. After 8 years, We relocated to
-            Switzerland where my husband's job is permanently based. My first 2
-            years in Switzerland, I continued working remotely for a Dubai-based
-            company and made use of this time learning German. My first Swiss
-            role was as Congress Coordinator for EULAR in Zurich.
-            <br />
-            <br />
             In 2023, I discovered a passion for coding and web development, I
             completed various online courses. This experience has ignited my
             desire to learn and grow in this field. I have honed my skills in
