--- a/index.html
+++ b/index.html
@@ -94,26 +94,31 @@
           </p>
           <div class="self_description" id="self_description_intro">
             <p class="px-5 pt-2">
-              I began my career leaning towards becoming a Researcher,
-              completing a Bachelor's in Agricultural Economics majoring in
-              Price and Marketing analysis. My first job was in Data Management
-              for university projects, but after a year, I yearned for more
-              challenge and transitioned to Sales, where I quickly became a
-              Sales Manager. This started my journey in Sales and Marketing,
-              working with companies like Unilever, Procter & Gamble, and
-              Nestle. Later, I took a break to pursue a Master's in Business
-              Management and working part-time as a Research Assistant for the
-              International Rice Research Institute. <br />
+              <span>
+                I began my career leaning towards becoming a Researcher,
+                completing a Bachelor's in Agricultural Economics majoring in
+                Price and Marketing analysis. My first job was in Data
+                Management for university projects, but after a year, I yearned
+                for more challenge and transitioned to Sales, where I quickly
+                became a Sales Manager. This started my journey in Sales and
+                Marketing, working with companies like Unilever, Procter &
+                Gamble, and Nestle. Later, I took a break to pursue a Master's
+                in Business Management and working part-time as a Research
+                Assistant for the International Rice Research Institute.
+              </span>
               <br />
-              I moved to Dubai, UAE, where I worked in hotel sales, advancing
-              from Sales Specialist at Sheraton JBR to the Global Sales Office
-              for Starwood Hotels. During my first year in Dubai, I met my
-              husband, and after two years of dating, we got married. Following
-              8 good years in Dubai, we relocated to Switzerland where my
-              husband's job is permanently based. My first 2 years in
-              Switzerland, I continued working remotely for a Dubai-based
-              company and made use of this time learning German. My first Swiss
-              role was as Congress Coordinator for EULAR in Zurich.
+              <br />
+              <span>
+                I moved to Dubai, UAE, where I worked in hotel sales, advancing
+                from Sales Specialist at Sheraton JBR to the Global Sales Office
+                for Starwood Hotels. During my first year in Dubai, I met my
+                husband, and after two years of dating, we got married.
+                Following 8 good years in Dubai, we relocated to Switzerland
+                where my husband's job is permanently based. My first 2 years in
+                Switzerland, I continued working remotely for a Dubai-based
+                company and made use of this time learning German. My first
+                Swiss role was as Congress Coordinator for EULAR in Zurich.
+              </span>
             </p>
           </div>
         </div>
