--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </p>
           <div class="self_description" id="self_description_intro">
             <p class="px-5 pt-2">
-              <span>
+              <span id="intro_first_paragraph">
                 I began my career leaning towards becoming a Researcher,
                 completing a Bachelor's in Agricultural Economics majoring in
                 Price and Marketing analysis. My first job was in Data
@@ -108,7 +108,7 @@
               </span>
               <br />
               <br />
-              <span>
+              <span id="intro_second_paragraph">
                 I moved to Dubai, UAE, where I worked in hotel sales, advancing
                 from Sales Specialist at Sheraton JBR to the Global Sales Office
                 for Starwood Hotels. During my first year in Dubai, I met my
@@ -123,7 +123,7 @@
           </div>
         </div>
         <div class="self_description">
-          <p class="px-5">
+          <p class="px-5" id="intro_third_paragraph">
             In 2023, I discovered a passion for coding and web development, I
             completed various online courses. This experience has ignited my
             desire to learn and grow in this field. I have honed my skills in
