--- a/project.html
+++ b/project.html
@@ -27,24 +27,26 @@
       <button onclick="switchLanguage('de')">DE</button>
     </div>
     <a href="/index.html" class="homepage-link mt-3 mb-3">Back to homepage</a>
-    <h1 class="text-center">Projects</h1>
-    <h3 class="text-center py-4">Some of the projects I have worked on...</h3>
+    <h1 class="text-center" id="title">Projects</h1>
+    <h3 class="text-center py-4" id="projects_intro">
+      Some of the projects I have worked on...
+    </h3>
     <br />
     <div class="container border-top">
       <div class="row mt-3">
         <div class="col-6">
           <h2 class="mb-3">World Clock app</h2>
-          <p>
+          <p id="world_clock">
             Created a dynamic world clock application that provides the current
             time and date for any city entered by the user. The app features a
             continuously updating clock that counts minutes and seconds in
             real-time, ensuring users have accurate time information for global
             cities.
           </p>
-          <small
-            >Technical Skills: Programming Languages: HTML, CSS, Javascript /
+          <p class="technical_skills">
+            Technical Skills: Programming Languages: HTML, CSS, Javascript /
             APIs: Moments.js, Axios / Development Tools: Visual Studio Code
-          </small>
+          </p>
           <div class="mt-5">
             <a
               href="https://ephemeral-pasca-7021d5.netlify.app/"
@@ -78,7 +80,7 @@
         </div>
         <div class="col-6">
           <h2 class="mb-3">Weather app</h2>
-          <p>
+          <p id="weather_app">
             Developed a user-friendly weather application as my first coding
             project. The app provides real-time weather updates for any city
             worldwide. By simply typing the city's name, users can access
@@ -86,11 +88,11 @@
             weather conditions. The app also displays the current day and time
             for the specified city.
           </p>
-          <small
-            >Technical Skills: Programming Languages: HTML, CSS, Javascript /
+          <p class="technical_skills">
+            Technical Skills: Programming Languages: HTML, CSS, Javascript /
             APIs: Axios, Weather API from Shecodes / Development Tools: Visual
             Studio Code
-          </small>
+          </p>
           <div class="mt-5">
             <a
               href="https://ginnys-weather-app.netlify.app/"
@@ -104,18 +106,18 @@
       <div class="row">
         <div class="col-6">
           <h2 class="mb-3">Weather Forecast app</h2>
-          <p>
+          <p id="weather_forecast">
             Created an advanced weather forecasting application that provides
             detailed weather information for any searched city. The app displays
             current weather conditions, sunrise and sunset times, and a 5-day
             weather forecast, offering users comprehensive weather data for
             better planning.
           </p>
-          <small
-            >Technical Skills: Programming Languages: HTML, CSS, Javascript /
+          <p class="technical_skills">
+            Technical Skills: Programming Languages: HTML, CSS, Javascript /
             APIs: Axios, Weather API from Shecodes / Development Tools: Visual
             Studio Code
-          </small>
+          </p>
           <div class="mt-5">
             <a
               href="https://ginnys-weather-forecast-project.netlify.app/"
@@ -149,18 +151,18 @@
         </div>
         <div class="col-6">
           <h2 class="mb-3">Recipe AI app</h2>
-          <p>
+          <p id="recipe_ai">
             Created an innovative AI-driven recipe generator that offers users
             the simplest and most delicious recipes based on entered ingredients
             or specific recipe searches. The CHEF AI leverages advanced
             algorithms to provide easy-to-follow cooking instructions, ensuring
             users can make the most of the ingredients they have on hand.
           </p>
-          <small
-            >Technical Skills: Programming Languages: HTML, CSS, Javascript /
+          <p class="technical_skills">
+            Technical Skills: Programming Languages: HTML, CSS, Javascript /
             APIs: Axios, AI API from Shecodes / Development Tools: Visual Studio
             Code
-          </small>
+          </p>
           <div class="mt-5">
             <a
               href="https://ginnysrecipegenerator.netlify.app/"
@@ -191,5 +193,6 @@
         </li>
       </ul>
     </div>
+    <script src="./project.js"></script>
   </body>
 </html>
