--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
       <div class="row">
         <div class="col-md-12">
           <h1 class="text-center" id="title_AI">Get to know me more!</h1>
+          <h3 class="text-center" id="intro_AI">
+            "Ginny's AI is trained to answer your question below." 🤓
+          </h3>
           <div class="form_container">
             <form id="question-request">
               <input
@@ -600,7 +603,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
   </body>
 </html>
