--- a/index.html
+++ b/index.html
@@ -586,6 +586,12 @@
             title="Tableau"
             ><img src="./images/tableau.svg" alt="tableau_icon" id="tableau"
           /></a>
+          <a
+            href="https://www.shecodes.io/graduates/77662-ginelle-doubek"
+            target="_blank"
+            title="SheCodes"
+            ><i class="fa fa-laptop" aria-hidden="true"></i
+          ></a>
         </span>
       </div>
       <div>
