Added new certification

--- a/index.html
+++ b/index.html
@@ -503,21 +503,31 @@
           ><img
             class="image_certification1"
             src="/images/Professional Cert Program in Data Analytics.jpg"
+            alt="Data Analytics Certification"
         /></a>
         <a
           href="https://www.shecodes.io/certificates/de2014f35ca3fe08c5c7c16516f5a395?_gl=1*1hs2agr*_gcl_au*MTE5MjQ5ODg1Ni4xNzM4NTAwOTI4"
           target="_blank"
-          ><img class="image_certification" src="/images/INtro to coding.png"
+          ><img
+            class="image_certification"
+            src="/images/INtro to coding.png"
+            alt="Introduction to Coding Cert"
         /></a>
         <a
           href="https://www.shecodes.io/certificates/715be762a8e8843700a9fac7b5b7b59c?_gl=1*1tv6jhf*_gcl_au*MTE5MjQ5ODg1Ni4xNzM4NTAwOTI4"
           target="_blank"
-          ><img class="image_certification" src="/images/Intro to WebDevt.png"
+          ><img
+            class="image_certification"
+            src="/images/Intro to WebDevt.png"
+            alt="Intro to Web Development Cert"
         /></a>
         <a
           href="https://www.shecodes.io/certificates/b0534a8f0535df32b6c802e5f86bea49?_gl=1*1dsea0q*_gcl_au*MTE5MjQ5ODg1Ni4xNzM4NTAwOTI4"
           target="_blank"
-          ><img class="image_certification" src="/images/Web Devt Cert.png"
+          ><img
+            class="image_certification"
+            src="/images/Web Devt Cert.png"
+            alt="Basic Web Development Cert"
         /></a>
         <a
           href="https://www.shecodes.io/certificates/df9eb683b193f826c8f87542c6e77c24?_gl=1*1dsea0q*_gcl_au*MTE5MjQ5ODg1Ni4xNzM4NTAwOTI4"
@@ -525,11 +535,15 @@
           ><img
             class="image_certification"
             src="/images/Advance Web Devt Cert SheCodes.png"
+            alt="Advance Web Development Cert"
         /></a>
         <a
           href="https://www.shecodes.io/certificates/1119cee0dc00bd7dd2353acf51d5169c?_gl=1*1j8fahz*_gcl_au*MTE5MjQ5ODg1Ni4xNzM4NTAwOTI4"
           target="_blank"
-          ><img class="image_certification" src="/images/Intro to Python.png"
+          ><img
+            class="image_certification"
+            src="/images/Intro to Python.png"
+            alt="Python Cert"
         /></a>
         <a
           href="https://www.shecodes.io/certificates/84540bb96675e7184be2f2c182e74734?_gl=1*1j8fahz*_gcl_au*MTE5MjQ5ODg1Ni4xNzM4NTAwOTI4"
@@ -537,11 +551,23 @@
           ><img
             class="image_certification"
             src="/images/ADvance Python Cert.png"
+            alt="Advance Python Cert"
         /></a>
         <a
           href="https://www.shecodes.io/certificates/b5a7bc9b07de4a74170541d6f8c2f538?_gl=1*kp62h1*_gcl_au*MTE5MjQ5ODg1Ni4xNzM4NTAwOTI4"
           target="_blank"
-          ><img class="image_certification" src="/images/AI Certificate.png"
+          ><img
+            class="image_certification"
+            src="/images/AI Certificate.png"
+            alt="AI Cert"
+        /></a>
+        <a
+          href="https://www.shecodes.io/certificates/f4657c695ebf4c8ea523e4e2d9c9094e"
+          target="_blank"
+          ><img
+            class="image_certification"
+            src="/images/Python AI Cert.png"
+            alt="Python AI Cert"
         /></a>
       </div>
     </div>
