--- a/project.html
+++ b/project.html
@@ -173,6 +173,39 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-6">
+          <h2 class="mb-3">Travel Website</h2>
+          <p id="travel_website">
+            This project is created to showcase and practice my skills in
+            creating website using only CSS to style the whole HTML. This
+            includes Hero, Footer, Cards, Grids, Embeds, CSS Filters and HTML
+            Table. I chose Prague as its one of my second home here in Europe.
+          </p>
+          <p class="technical_skills">
+            Technical Skills: Programming Languages: HTML, CSS, Javascript,
+            Hero, Grids, Embeds, Cards Development Tools: Visual Studio Code
+          </p>
+          <div class="mt-5">
+            <a
+              href="https://travel-prague-website.netlify.app/"
+              target="_blank"
+              class="primary-link"
+              >Launch Travel Website</a
+            >
+          </div>
+        </div>
+        <div class="col-6 iframe_content">
+          <iframe
+            id="inlineFrameExample"
+            title="Inline Frame Example"
+            width="650"
+            height="450"
+            src="https://travel-prague-website.netlify.app/"
+          >
+          </iframe>
+        </div>
+      </div>
     </div>
     <div class="other-projects">
       <h2 class="mb-3">Other projects...</h2>
@@ -189,6 +222,13 @@
             href="https://replit.com/@giballesfin/Python-Advanced-Final-Project"
             target="_blank"
             >Python Project</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://colab.research.google.com/drive/19p6SMy2vq8Bqj_rkM9ZbZNbbu7trh1CQ?usp=sharing"
+            target="_blank"
+            >Python AI Project</a
           >
         </li>
       </ul>
