Added additional project and translation

--- a/project.html
+++ b/project.html
@@ -208,7 +208,7 @@
       </div>
     </div>
     <div class="other-projects">
-      <h2 class="mb-3">Other projects...</h2>
+      <h2 class="mb-3" id="other_projects">Other projects...</h2>
       <ul>
         <li>
           <a
