--- a/index.html
+++ b/index.html
@@ -90,50 +90,29 @@
           <h1 class="text-center" id="ginelle_doubek">Ginelle Doubek</h1>
           <h3 class="text-center">~Ginny~</h3>
           <p class="text-center mt-2 mb-3" id="job_based">
-            "I am a woman of action."
+            "Creative Front-End Developer: Coding, Creating, Connecting."
           </p>
           <div class="self_description" id="self_description_intro">
             <p class="px-5 pt-2">
               <span id="intro_first_paragraph">
-                I began my career leaning towards becoming a Researcher,
-                completing a Bachelor's in Agricultural Economics majoring in
-                Price and Marketing analysis. My first job was in Data
-                Management for university projects, but after a year, I yearned
-                for more challenge and transitioned to Sales, where I quickly
-                became a Sales Manager. This started my journey in Sales and
-                Marketing, working with companies like Unilever, Procter &
-                Gamble, and Nestle. Later, I took a break to pursue a Master's
-                in Business Management and working part-time as a Research
-                Assistant for the International Rice Research Institute.
-              </span>
-              <br />
-              <br />
-              <span id="intro_second_paragraph">
-                I moved to Dubai, UAE, where I worked in hotel sales, advancing
-                from Sales Specialist at Sheraton JBR to the Global Sales Office
-                for Starwood Hotels. During my first year in Dubai, I met my
-                husband, and after two years of dating, we got married.
-                Following 8 good years in Dubai, we relocated to Switzerland
-                where my husband's job is permanently based. My first 2 years in
-                Switzerland, I continued working remotely for a Dubai-based
-                company and made use of this time learning German. My first
-                Swiss role was as Congress Coordinator for EULAR in Zurich.
+                A creative web developer with a diverse background in research,
+                sales, and international business. I bring a unique perspective
+                to creating innovative and user-friendly web solutions in
+                software and web development. I completed a Full Stack Web
+                Development Bootcamp with SheCodes and gained experience in
+                React, Bootstrap, and responsive design. I enjoy using tools
+                like VSCode, Github, and Microsoft Windows to build projects and
+                I'm particularly interested in AI solutions. My career journey
+                began in agricultural economics and evolved through roles at
+                Unilever, Procter & Gamble, and Nestle, leading to a Master's in
+                Business Management. With a passion to become a front-end
+                developer and a love for React projects, I am eager to
+                contribute my skills and experience to impactful projects in the
+                IT industry. My experience in diverse roles has instilled in me
+                the mantra, 'When the going gets tough, the tough get going.
               </span>
             </p>
           </div>
-        </div>
-        <div class="self_description">
-          <p class="px-5" id="intro_third_paragraph">
-            In 2023, I discovered a passion for coding and web development, I
-            completed various online courses. This experience has ignited my
-            desire to learn and grow in this field. I have honed my skills in
-            HTML, CSS, and JavaScript over the past 2 years. I've created
-            applications and websites, combining my diverse professional
-            experiences with dedication and drive. My optimism and self belief
-            empower me to overcome challenges. "Quitting" is not in my
-            vocabulary. I live by the mantra, "When the going gets tough, the
-            tough get going."
-          </p>
         </div>
       </div>
     </div>
