--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </p>
           <div class="self_description" id="self_description_intro">
             <p class="px-5 pt-2">
-              <span id="intro_first_paragraph">
+              <div class="ps-5 mb-3" id="intro_first_paragraph">
                 A creative web developer with a diverse background in research,
                 sales, and international business. I bring a unique perspective
                 to creating innovative and user-friendly web solutions in
@@ -110,12 +110,20 @@
                 contribute my skills and experience to impactful projects in the
                 IT industry. My experience in diverse roles has instilled in me
                 the mantra, 'When the going gets tough, the tough get going.
-              </span>
+              </div>
+              <div class=" mb-5 ps-5">
+                Game Developed:
+                <a href="https://fascinating-jelly-9525db.netlify.app/"
+                  >Puzzle Peg Cross</a
+                >
+              </div>
             </p>
           </div>
         </div>
       </div>
     </div>
+    
+
     <div class="container_AI">
       <div class="row">
         <div class="col-md-12">
