--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               </div>
               <div class=" mb-5 ps-5">
                 Game Developed:
-                <a href="https://fascinating-jelly-9525db.netlify.app/"
+                <a href="https://fascinating-jelly-9525db.netlify.app/" target="_blank"
                   >Puzzle Peg Cross</a
                 >
               </div>
