--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     <div class="container_AI">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 my-5">
           <h2 class="text-center" id="title_AI">Get to know me more!</h2>
           <h3 class="text-center" id="intro_AI">
             "Ginny's AI is trained to answer your question below." 🤓
@@ -155,7 +155,7 @@
     </div>
 
     <div class="button_container">
-      <div class="text-center mt-5 ms-5">
+      <div class="text-center my-5 ms-5 pt-3">
         <div class="d-flex flex-wrap gap-3 justify-content-center">
           <button
           class="btn btn-primary px-5 collapsible"
@@ -239,7 +239,7 @@
               </div>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-12 col-md-4">
             <div
               class="collapse multi-collapse content"
               id="multiCollapseExample3"
@@ -248,8 +248,8 @@
         </div>
       </div>
     </div>
-    <div class="apps-hobby-container m-5 p-5">
-      <div class="row ms-5 ps-5">
+    <div class="apps-hobby-container mx-5 px-5">
+      <div class="row">
         <div class="col-7 border-end ps-5">
           <h2 id="skills">Skills</h2>
           <div class="row row-cols-3">
@@ -460,6 +460,7 @@
             </div>
           </div>
           <br /><br />
+          <div class="col-12 ">
           <h2 id="languages">Languages</h2>
           <div class="row row-cols-3 text-center mt-3">
             <div class="col hobbies mt-2 text-center">
@@ -478,6 +479,7 @@
         </div>
       </div>
     </div>
+    <div class="cert_container">
     <h2 class="text-center pt-5" id="certification">Certifications</h2>
     <div class="photos-wrapper mb-3">
       <div class="imageContainer">
@@ -553,7 +555,8 @@
         /></a>
       </div>
     </div>
-    <footer class="text-center pt-3">
+  </div>
+    <footer class="text-center pt-3" role="contentinfo">
       <div>
         <a
           href="mailto:ginelle.doubek@gmail.com"
