updated CSS and HTML

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     <div class="apps-hobby-container mx-5 px-5">
       <div class="row">
         <div class="col-7 border-end ps-5">
-          <h2 id="skills">Skills</h2>
+          <h2 class="text-center" id="skills">Skills</h2>
           <div class="row row-cols-3">
             <div class="col mt-2 text-center">
               <img
@@ -418,7 +418,7 @@
           </div>
         </div>
         <div class="col-5 ps-5">
-          <h2 id="hobbies">Hobbies</h2>
+          <h2 class="text-center" id="hobbies">Hobbies</h2>
           <div class="row row-cols-3 text-center mt-3">
             <div class="col hobbies mt-2">
               <i class="bx bx-tennis-ball bx-lg bx-rotate-270"></i>
@@ -461,7 +461,7 @@
           </div>
           <br /><br />
           <div class="col-12 ">
-          <h2 id="languages">Languages</h2>
+          <h2 class="text-center" id="languages">Languages</h2>
           <div class="row row-cols-3 text-center mt-3">
             <div class="col hobbies mt-2 text-center">
               <div class="language-class">C1</div>
@@ -481,7 +481,7 @@
     </div>
     <div class="cert_container">
     <h2 class="text-center pt-5" id="certification">Certifications</h2>
-    <div class="photos-wrapper mb-3">
+    <div class="photos-wrapper pb-5">
       <div class="imageContainer">
         <a href="https://success.simplilearn.com/85031165" target="_blank"
           ><img
